force-app/main/default/objects/Auction_Data__c/fields/max_process_number__c.field-meta.xml
<CustomField>
    <fullName>max_process_number__c</fullName>
    <inlineHelpText>工程分割が何回あるか。</inlineHelpText>
    <label>最大工程番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>