force-app/main/default/objects/Auction_Data__c/fields/max_process_pickup_date__c.field-meta.xml
<CustomField>
    <fullName>max_process_pickup_date__c</fullName>
    <inlineHelpText>工程番号が1番大きい値の集荷日を表示</inlineHelpText>
    <label>工程集荷日（最大）</label>
    <type>Date</type>
</CustomField>