force-app/main/default/objects/Auction_Data__c/fields/Maximum_Load_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Load_Capacity__c</fullName>
    <description>流通のみ</description>
    <label>最大積載量</label>
    <length>255</length>
    <type>Text</type>
</CustomField>