force-app/main/default/objects/Auction_Data__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <description>流通</description>
    <label>会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>