force-app/main/default/objects/Auction_Data__c/fields/Memo_auction__c.field-meta.xml
<CustomField>
    <fullName>Memo_auction__c</fullName>
    <label>備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>