force-app/main/default/objects/Auction_Data__c/fields/memo_for_mvr__c.field-meta.xml
<CustomField>
    <fullName>memo_for_mvr__c</fullName>
    <label>リサイクル備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>