force-app/main/default/objects/Auction_Data__c/fields/memo_logistics_trading__c.field-meta.xml
<CustomField>
    <fullName>memo_logistics_trading__c</fullName>
    <label>搬出・輸出メモ</label>
    <type>TextArea</type>
</CustomField>