force-app/main/default/objects/Auction_Data__c/fields/meridiem__c.field-meta.xml
<CustomField>
    <fullName>meridiem__c</fullName>
    <description>車両引取予約管理テーブル　pickup_reservation　meridiem</description>
    <label>時間区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>