force-app/main/default/objects/Auction_Data__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <description>共通
流通：走行距離
リユース：走行距離（走行距離単位）
　　　　　メーター改ざん</description>
    <label>走行距離</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>