force-app/main/default/objects/Auction_Data__c/fields/mileage_tanni__c.field-meta.xml
<CustomField>
    <fullName>mileage_tanni__c</fullName>
    <formula>TEXT(Mileage__c) &amp; mileageunit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>走行距離（単位あり）</label>
    <type>Text</type>
</CustomField>