force-app/main/default/objects/Auction_Data__c/fields/mileageunit__c.field-meta.xml
<CustomField>
    <fullName>mileageunit__c</fullName>
    <label>走行距離単位</label>
    <length>255</length>
    <type>Text</type>
</CustomField>