force-app/main/default/objects/Auction_Data__c/fields/misson__c.field-meta.xml
<CustomField>
    <fullName>misson__c</fullName>
    <label>ミッション</label>
    <length>255</length>
    <type>Text</type>
</CustomField>