force-app/main/default/objects/Auction_Data__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>