force-app/main/default/objects/Auction_Data__c/fields/Model_English__c.field-meta.xml
<CustomField>
    <fullName>Model_English__c</fullName>
    <description>車種の英字（フローで反映）</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>