force-app/main/default/objects/Auction_Data__c/fields/Model_relation__c.field-meta.xml
<CustomField>
    <fullName>Model_relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DWHからは車種コードを連携し、レコードトリガーフローで埋め込んでいる</description>
    <label>車種（参照）</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>オークション出品データ</relationshipLabel>
    <relationshipName>Model_relation</relationshipName>
    <type>Lookup</type>
</CustomField>