force-app/main/default/objects/Auction_Data__c/fields/Model_text__c.field-meta.xml
<CustomField>
    <fullName>Model_text__c</fullName>
    <label>車種テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>