force-app/main/default/objects/Auction_Data__c/fields/MVR__c.field-meta.xml
<CustomField>
    <fullName>MVR__c</fullName>
    <description>MVR使用欄。</description>
    <label>リサイクルステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未入金</fullName>
            </value>
            <value>
                <fullName>未予約</fullName>
            </value>
            <value>
                <fullName>未搬出</fullName>
            </value>
            <value>
                <fullName>出庫済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>