force-app/main/default/objects/Auction_Data__c/fields/MVR_check__c.field-meta.xml
<CustomField>
    <fullName>MVR_check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MVR使用欄</description>
    <label>リサイクル対応</label>
    <type>Checkbox</type>
</CustomField>