force-app/main/default/objects/Auction_Data__c/fields/my_auc_or_other__c.field-meta.xml
<CustomField>
    <fullName>my_auc_or_other__c</fullName>
    <description>自社オクの場合、ひとまとめで確認できないのでこの項目を追加。</description>
    <formula>IF ( sales_category__c = &apos;AucBid（代行）&apos;, &quot;代行A&quot;,&quot;自社A&quot;)</formula>
    <label>自社/代行区分</label>
    <type>Text</type>
</CustomField>