force-app/main/default/objects/Auction_Data__c/fields/new_lot_after_cancel__c.field-meta.xml
<CustomField>
    <fullName>new_lot_after_cancel__c</fullName>
    <description>旧ロットと</description>
    <inlineHelpText>キャンセル後、新しく生んだデータ側に旧ロットが入っていれば、紐づけして表示</inlineHelpText>
    <label>キャンセル後の新ロット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>