force-app/main/default/objects/Auction_Data__c/fields/New_PIC__c.field-meta.xml
<CustomField>
    <fullName>New_PIC__c</fullName>
    <label>新規時担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>