force-app/main/default/objects/Auction_Data__c/fields/Next__c.field-meta.xml
<CustomField>
    <fullName>Next__c</fullName>
    <label>行き先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>売却</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>MK</fullName>
            </value>
            <value>
                <fullName>営流</fullName>
            </value>
            <value>
                <fullName>他社</fullName>
            </value>
            <value>
                <fullName>修理</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>