force-app/main/default/objects/Auction_Data__c/fields/Next_follow_up_date_pickup__c.field-meta.xml
<CustomField>
    <fullName>Next_follow_up_date_pickup__c</fullName>
    <label>次回追跡日（搬出）</label>
    <type>Date</type>
</CustomField>