force-app/main/default/objects/Auction_Data__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>流通のみ</description>
    <label>特記事項</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>