force-app/main/default/objects/Auction_Data__c/fields/obic_cancel_date__c.field-meta.xml
<CustomField>
    <fullName>obic_cancel_date__c</fullName>
    <label>OBICキャンセル処理日</label>
    <type>Date</type>
</CustomField>