force-app/main/default/objects/Auction_Data__c/fields/okiba__c.field-meta.xml
<CustomField>
    <fullName>okiba__c</fullName>
    <label>置き場</label>
    <length>255</length>
    <type>Text</type>
</CustomField>