force-app/main/default/objects/Auction_Data__c/fields/old_lot_num_relation__c.field-meta.xml
<CustomField>
    <fullName>old_lot_num_relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>旧ロットのオークション出品データ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>オークション出品データ</relationshipLabel>
    <relationshipName>old_lot_num_relation</relationshipName>
    <type>Lookup</type>
</CustomField>