force-app/main/default/objects/Auction_Data__c/fields/old_unloading_deadline__c.field-meta.xml
<CustomField>
    <fullName>old_unloading_deadline__c</fullName>
    <inlineHelpText>ペナルティ発生時のみ表示される</inlineHelpText>
    <label>ペナルティ発生時の搬出期限</label>
    <type>Date</type>
</CustomField>