force-app/main/default/objects/Auction_Data__c/fields/ope_fee__c.field-meta.xml
<CustomField>
    <fullName>ope_fee__c</fullName>
    <defaultValue>16500</defaultValue>
    <label>オペ費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>