force-app/main/default/objects/Auction_Data__c/fields/operations_fee_include_tax_mvr__c.field-meta.xml
<CustomField>
    <fullName>operations_fee_include_tax_mvr__c</fullName>
    <formula>operations_fee_mvr__c *1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>消費税は10％で計算</inlineHelpText>
    <label>税込み（提示金額）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>