force-app/main/default/objects/Auction_Data__c/fields/operations_fee_mvr__c.field-meta.xml
<CustomField>
    <fullName>operations_fee_mvr__c</fullName>
    <description>オークション課→MVRにて使用</description>
    <label>提示金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>