force-app/main/default/objects/Auction_Data__c/fields/order_car_number__c.field-meta.xml
<CustomField>
    <fullName>order_car_number__c</fullName>
    <label>車台番号（オーダーデータ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>