force-app/main/default/objects/Auction_Data__c/fields/order_customer_name__c.field-meta.xml
<CustomField>
    <fullName>order_customer_name__c</fullName>
    <label>得意先名（オーダーデータ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>