force-app/main/default/objects/Auction_Data__c/fields/order_date__c.field-meta.xml
<CustomField>
    <fullName>order_date__c</fullName>
    <label>受注日</label>
    <type>Date</type>
</CustomField>