force-app/main/default/objects/Auction_Data__c/fields/order_item_code__c.field-meta.xml
<CustomField>
    <fullName>order_item_code__c</fullName>
    <label>品名コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>