force-app/main/default/objects/Auction_Data__c/fields/order_item_name__c.field-meta.xml
<CustomField>
    <fullName>order_item_name__c</fullName>
    <label>品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>