force-app/main/default/objects/Auction_Data__c/fields/order_lot_number__c.field-meta.xml
<CustomField>
    <fullName>order_lot_number__c</fullName>
    <label>ロット番号（オーダーデータ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>