force-app/main/default/objects/Auction_Data__c/fields/order_vehicle_type_name__c.field-meta.xml
<CustomField>
    <fullName>order_vehicle_type_name__c</fullName>
    <label>車種名（オーダーデータ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>