force-app/main/default/objects/Auction_Data__c/fields/other_auction_listed_check__c.field-meta.xml
<CustomField>
    <fullName>other_auction_listed_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>他社オク出品対応済みチェック</label>
    <type>Checkbox</type>
</CustomField>