force-app/main/default/objects/Auction_Data__c/fields/other_key_u_cname__c.field-meta.xml
<CustomField>
    <fullName>other_key_u_cname__c</fullName>
    <label>解体提携</label>
    <length>255</length>
    <type>Text</type>
</CustomField>