force-app/main/default/objects/Auction_Data__c/fields/other_member_bit_price__c.field-meta.xml
<CustomField>
    <fullName>other_member_bit_price__c</fullName>
    <label>他社1番手金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>