force-app/main/default/objects/Auction_Data__c/fields/own_yard_or_other__c.field-meta.xml
<CustomField>
    <fullName>own_yard_or_other__c</fullName>
    <formula>IF(CONTAINS(okiba__c, &quot;ヤード&quot;), &quot;自社&quot;, &quot;他社&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自社ヤード/他社ヤード</label>
    <type>Text</type>
</CustomField>