force-app/main/default/objects/Auction_Data__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <description>リユースのみ</description>
    <label>所有権</label>
    <length>255</length>
    <type>Text</type>
</CustomField>