force-app/main/default/objects/Auction_Data__c/fields/Ownership_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Notes__c</fullName>
    <description>リユースのみ</description>
    <label>所有権備考</label>
    <type>TextArea</type>
</CustomField>