force-app/main/default/objects/Auction_Data__c/fields/payment_method__c.field-meta.xml
<CustomField>
    <fullName>payment_method__c</fullName>
    <label>取引条件（payment_method）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>