force-app/main/default/objects/Auction_Data__c/fields/percent__c.field-meta.xml
<CustomField>
    <fullName>percent__c</fullName>
    <label>％オクフラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>