force-app/main/default/objects/Auction_Data__c/fields/Permanent_Cancellation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Cancellation_Deadline__c</fullName>
    <description>流通</description>
    <label>永抹条件期限日</label>
    <type>Date</type>
</CustomField>