force-app/main/default/objects/Auction_Data__c/fields/Permanent_Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Cancellation_Notes__c</fullName>
    <description>流通のみ</description>
    <label>永抹条件備考</label>
    <type>TextArea</type>
</CustomField>