force-app/main/default/objects/Auction_Data__c/fields/phase__c.field-meta.xml
<CustomField>
    <fullName>phase__c</fullName>
    <label>フェーズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>