force-app/main/default/objects/Auction_Data__c/fields/Pick_up_Address__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Address__c</fullName>
    <description>リユースのみ</description>
    <label>引取場所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>