force-app/main/default/objects/Auction_Data__c/fields/Pick_Up_Date_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Date_Deadline__c</fullName>
    <description>共通</description>
    <label>搬出日期限</label>
    <type>Date</type>
</CustomField>