force-app/main/default/objects/Auction_Data__c/fields/Pickup_Complete__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Complete__c</fullName>
    <description>リユースのみ</description>
    <label>引取完了</label>
    <length>255</length>
    <type>Text</type>
</CustomField>