force-app/main/default/objects/Auction_Data__c/fields/Pickup_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Document_Status__c</fullName>
    <label>引取書類ステータス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>