force-app/main/default/objects/Auction_Data__c/fields/Pickup_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Report_Date__c</fullName>
    <description>共通</description>
    <label>引取報告日</label>
    <type>Date</type>
</CustomField>