force-app/main/default/objects/Auction_Data__c/fields/pickup_reservation_create_dt__c.field-meta.xml
<CustomField>
    <fullName>pickup_reservation_create_dt__c</fullName>
    <label>引取予約　登録日時</label>
    <type>DateTime</type>
</CustomField>