force-app/main/default/objects/Auction_Data__c/fields/pickup_reservation_del_flg__c.field-meta.xml
<CustomField>
    <fullName>pickup_reservation_del_flg__c</fullName>
    <label>予約状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>