force-app/main/default/objects/Auction_Data__c/fields/pickup_reservation_yard__c.field-meta.xml
<CustomField>
    <fullName>pickup_reservation_yard__c</fullName>
    <label>引取予約ヤード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>