force-app/main/default/objects/Auction_Data__c/fields/power_attorney_deadline__c.field-meta.xml
<CustomField>
    <fullName>power_attorney_deadline__c</fullName>
    <label>名変期限日</label>
    <type>Date</type>
</CustomField>