force-app/main/default/objects/Auction_Data__c/fields/prediction_country__c.field-meta.xml
<CustomField>
    <fullName>prediction_country__c</fullName>
    <label>オークション課予想向け地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>