force-app/main/default/objects/Auction_Data__c/fields/Presale__c.field-meta.xml
<CustomField>
    <fullName>Presale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>先売り依頼</label>
    <referenceTo>Presale__c</referenceTo>
    <relationshipLabel>オークション出品データ</relationshipLabel>
    <relationshipName>Presale</relationshipName>
    <type>Lookup</type>
</CustomField>