force-app/main/default/objects/Auction_Data__c/fields/previous_listing_area__c.field-meta.xml
<CustomField>
    <fullName>previous_listing_area__c</fullName>
    <label>前回出品エリア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>