force-app/main/default/objects/Auction_Data__c/fields/previous_previous_end_date__c.field-meta.xml
<CustomField>
    <fullName>previous_previous_end_date__c</fullName>
    <label>前々回終了日</label>
    <type>Date</type>
</CustomField>