force-app/main/default/objects/Auction_Data__c/fields/Price_and_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Price_and_Expenses__c</fullName>
    <formula>Expenses__c  +  Selling_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売却価格+諸経費（数式）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>