force-app/main/default/objects/Auction_Data__c/fields/PriceRange__c.field-meta.xml
<CustomField>
    <fullName>PriceRange__c</fullName>
    <formula>IF(Price_and_Expenses__c &lt;= 150000, &quot;15万円以下&quot;,
IF(Price_and_Expenses__c &lt;= 500000, &quot;16～50万円&quot;,
IF(Price_and_Expenses__c &lt;= 1000000, &quot;51～100万円&quot;,
IF(Price_and_Expenses__c &lt;= 1500000, &quot;101～150万円&quot;,
IF(Price_and_Expenses__c &lt;= 2000000, &quot;151～200万円&quot;,
IF(Price_and_Expenses__c &lt; 10000000,
  TEXT(FLOOR(Price_and_Expenses__c / 1000000)) &amp; &quot;00万円台&quot;,
  &quot;1000万円以上&quot;
)
)))))</formula>
    <label>売却価格帯</label>
    <type>Text</type>
</CustomField>