force-app/main/default/objects/Auction_Data__c/fields/Processing_Category__c.field-meta.xml
<CustomField>
    <fullName>Processing_Category__c</fullName>
    <description>共通</description>
    <label>処理区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>