force-app/main/default/objects/Auction_Data__c/fields/Procurement_Officer__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Officer__c</fullName>
    <label>仕入担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>