force-app/main/default/objects/Auction_Data__c/fields/Procurement_Sales_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Sales_Estimate__c</fullName>
    <description>流通</description>
    <label>仕入希望価格</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>