force-app/main/default/objects/Auction_Data__c/fields/Property_Manager_Sales__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件担当者（販売）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Property_Manager_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>