force-app/main/default/objects/Auction_Data__c/fields/Property_Manager_Sales_text__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager_Sales_text__c</fullName>
    <label>物件担当（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>