force-app/main/default/objects/Auction_Data__c/fields/Proxy_member__c.field-meta.xml
<CustomField>
    <fullName>Proxy_member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理出品　出品店</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>オークション出品データ (代理出品　出品店)</relationshipLabel>
    <relationshipName>Proxy_member</relationshipName>
    <type>Lookup</type>
</CustomField>