force-app/main/default/objects/Auction_Data__c/fields/purchase_amount__c.field-meta.xml
<CustomField>
    <fullName>purchase_amount__c</fullName>
    <description>買取商談に紐づく買取実績から取得。</description>
    <formula>Sales_Opportunity__r.PurchaseExperience__r.PurchaseAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>買取商談に紐づく買取実績から取得。</inlineHelpText>
    <label>仕入金額（買取実績）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>