force-app/main/default/objects/Auction_Data__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>共通（リユース流通には現状ないが、Salesforceに「買取日」として保持している）</description>
    <label>仕入日</label>
    <type>Date</type>
</CustomField>