force-app/main/default/objects/Auction_Data__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <description>共通
流通：仕入れ値
リユース：買取価格</description>
    <label>仕入値</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>