force-app/main/default/objects/Auction_Data__c/fields/Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type__c</fullName>
    <label>購入タイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>