force-app/main/default/objects/Auction_Data__c/fields/PurchaseExperience_SalesDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseExperience_SalesDate__c</fullName>
    <formula>Sales_Opportunity__r.PurchaseExperience__r.SalesDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>買取実績　売上日</label>
    <type>Date</type>
</CustomField>