force-app/main/default/objects/Auction_Data__c/fields/put_corner__c.field-meta.xml
<CustomField>
    <fullName>put_corner__c</fullName>
    <label>出品コーナー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>