force-app/main/default/objects/Auction_Data__c/fields/R_Point_Price__c.field-meta.xml
<CustomField>
    <fullName>R_Point_Price__c</fullName>
    <description>共通</description>
    <label>R点価格</label>
    <length>255</length>
    <type>Text</type>
</CustomField>