force-app/main/default/objects/Auction_Data__c/fields/Recycle_hoop_price__c.field-meta.xml
<CustomField>
    <fullName>Recycle_hoop_price__c</fullName>
    <label>希望金額（リサイクル）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>