force-app/main/default/objects/Auction_Data__c/fields/Recycling_Status__c.field-meta.xml
<CustomField>
    <fullName>Recycling_Status__c</fullName>
    <description>リユースのみ</description>
    <label>リサイクル状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>