force-app/main/default/objects/Auction_Data__c/fields/recyclingfee__c.field-meta.xml
<CustomField>
    <fullName>recyclingfee__c</fullName>
    <label>リサイクル料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>