force-app/main/default/objects/Auction_Data__c/fields/refund_amount__c.field-meta.xml
<CustomField>
    <fullName>refund_amount__c</fullName>
    <label>返金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>