force-app/main/default/objects/Auction_Data__c/fields/refund_status__c.field-meta.xml
<CustomField>
    <fullName>refund_status__c</fullName>
    <label>返金状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>