force-app/main/default/objects/Auction_Data__c/fields/refund_type__c.field-meta.xml
<CustomField>
    <fullName>refund_type__c</fullName>
    <label>返金種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>