force-app/main/default/objects/Auction_Data__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <description>リユースのみ</description>
    <label>登録番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>