force-app/main/default/objects/Auction_Data__c/fields/relist_amount__c.field-meta.xml
<CustomField>
    <fullName>relist_amount__c</fullName>
    <label>再出品金額</label>
    <length>255</length>
    <type>Text</type>
</CustomField>