force-app/main/default/objects/Auction_Data__c/fields/Relocated__c.field-meta.xml
<CustomField>
    <fullName>Relocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>車両移動済み</label>
    <type>Checkbox</type>
</CustomField>