force-app/main/default/objects/Auction_Data__c/fields/Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Repair_Cost__c</fullName>
    <description>共通</description>
    <label>パーツ/工賃</label>
    <length>255</length>
    <type>Text</type>
</CustomField>