force-app/main/default/objects/Auction_Data__c/fields/reserve_date__c.field-meta.xml
<CustomField>
    <fullName>reserve_date__c</fullName>
    <label>引取予約日</label>
    <type>Date</type>
</CustomField>