force-app/main/default/objects/Auction_Data__c/fields/reuse_project_cancel_report__c.field-meta.xml
<CustomField>
    <fullName>reuse_project_cancel_report__c</fullName>
    <label>リユース案件キャンセル報告</label>
    <length>255</length>
    <type>Text</type>
</CustomField>