force-app/main/default/objects/Auction_Data__c/fields/run_contents__c.field-meta.xml
<CustomField>
    <fullName>run_contents__c</fullName>
    <description>メーター改ざん等</description>
    <label>走行距離内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>