force-app/main/default/objects/Auction_Data__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <label>売却日</label>
    <type>Date</type>
</CustomField>