force-app/main/default/objects/Auction_Data__c/fields/sales__c.field-meta.xml
<CustomField>
    <fullName>sales__c</fullName>
    <formula>Sales_Opportunity__r.PurchaseExperience__r.SalesAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上金額（買取商談）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>