force-app/main/default/objects/Auction_Data__c/fields/sales_category__c.field-meta.xml
<CustomField>
    <fullName>sales_category__c</fullName>
    <description>Sales_infoのsales_categoryから連携
※代行も取得できるため</description>
    <label>売却エリア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>