force-app/main/default/objects/Auction_Data__c/fields/sales_flg__c.field-meta.xml
<CustomField>
    <fullName>sales_flg__c</fullName>
    <formula>IF( ISBLANK( Sale_Date__c ), &quot;未売却&quot;, &quot;売却済&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売却フラグ</label>
    <type>Text</type>
</CustomField>