force-app/main/default/objects/Auction_Data__c/fields/sales_flg_year_month__c.field-meta.xml
<CustomField>
    <fullName>sales_flg_year_month__c</fullName>
    <formula>IF(
  ISBLANK(Sale_Date__c),
  NULL,
  TEXT(YEAR(Sale_Date__c)) &amp; &quot;/&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(Sale_Date__c)), 2)
)</formula>
    <label>売却日（年月）</label>
    <type>Text</type>
</CustomField>