force-app/main/default/objects/Auction_Data__c/fields/Sales_Representative_at_Sale__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative_at_Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>売却時販売担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Representative_at_Sale</relationshipName>
    <type>Lookup</type>
</CustomField>