force-app/main/default/objects/Auction_Data__c/fields/sales_return__c.field-meta.xml
<CustomField>
    <fullName>sales_return__c</fullName>
    <label>販売返答</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>