force-app/main/default/objects/Auction_Data__c/fields/Scheduled_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Pickup_Date__c</fullName>
    <description>リユースのみ</description>
    <label>引取予定日</label>
    <type>Date</type>
</CustomField>