force-app/main/default/objects/Auction_Data__c/fields/second_bit_memberid__c.field-meta.xml
<CustomField>
    <fullName>second_bit_memberid__c</fullName>
    <label>2番手会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>