force-app/main/default/objects/Auction_Data__c/fields/sell_etd__c.field-meta.xml
<CustomField>
    <fullName>sell_etd__c</fullName>
    <formula>ETD__c -  Sale_Date__c</formula>
    <label>売却日～ETD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>