force-app/main/default/objects/Auction_Data__c/fields/Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price__c</fullName>
    <description>共通
流通：売却金額
リユース：売却価格</description>
    <label>売却金額</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>