force-app/main/default/objects/Auction_Data__c/fields/Selling_Price_and_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price_and_Expenses__c</fullName>
    <description>共通</description>
    <label>売却金額+諸経費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>