force-app/main/default/objects/Auction_Data__c/fields/shaken_status__c.field-meta.xml
<CustomField>
    <fullName>shaken_status__c</fullName>
    <description>自社AAから他社AAへまくる際に、オークション課が使用</description>
    <label>車検有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>名変</fullName>
            </value>
            <value>
                <fullName>抹消</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>