force-app/main/default/objects/Auction_Data__c/fields/shift__c.field-meta.xml
<CustomField>
    <fullName>shift__c</fullName>
    <label>シフト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>