force-app/main/default/objects/Auction_Data__c/fields/Shipment_Document_Details__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Document_Details__c</fullName>
    <description>流通</description>
    <label>発送書類の内訳</label>
    <length>255</length>
    <type>Text</type>
</CustomField>