force-app/main/default/objects/Auction_Data__c/fields/slide_flg__c.field-meta.xml
<CustomField>
    <fullName>slide_flg__c</fullName>
    <description>スライド案件で粗利5万円以上の案件で、回送依頼があったもの。</description>
    <label>スライド　回送依頼</label>
    <length>255</length>
    <type>Text</type>
</CustomField>