force-app/main/default/objects/Auction_Data__c/fields/sococara_trading_adjusted_gross_profit__c.field-meta.xml
<CustomField>
    <fullName>sococara_trading_adjusted_gross_profit__c</fullName>
    <label>ソコトレ調整粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>