force-app/main/default/objects/Auction_Data__c/fields/Starting_Price__c.field-meta.xml
<CustomField>
    <fullName>Starting_Price__c</fullName>
    <description>共通</description>
    <label>開始金額</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>