force-app/main/default/objects/Auction_Data__c/fields/Stock_Condition__c.field-meta.xml
<CustomField>
    <fullName>Stock_Condition__c</fullName>
    <description>リユースのみ</description>
    <label>保管状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>