force-app/main/default/objects/Auction_Data__c/fields/stock_ship_date__c.field-meta.xml
<CustomField>
    <fullName>stock_ship_date__c</fullName>
    <description>stock_ship_historyから、stock_ship_categoryが2（出庫）かつ、last_ship_flgが1（最終出庫）のstock_ship_dateを取得</description>
    <label>最終出庫日</label>
    <type>Date</type>
</CustomField>